# aa-dotopt

./: .gitignore  CMakeLists.txt  README.md  SCHEDULE.md
.devcontainer/: devcontainer.json
bench/: CMakeLists.txt  main.cpp
bench/benches/: CMakeLists.txt  asm.cpp  asm.hpp  hello.hpp  imts.cpp  imts.hpp  openmp.cpp  openmp.hpp  scheduler.cpp  scheduler.hpp  sequential.cpp  sequential.hpp  sequential_asm.cpp  sequential_asm.hpp
doc/: BenchmarkResults.md
doc/report/: Ch-1.tex  Ch-2.tex  main.tex
scripts/: enable-perf.sh  fetch-libs.sh  install-deps.sh  update-all.sh
src/: CMakeLists.txt  imts.c  imts.h  zorder.c  zorder.h
src/api/: CMakeLists.txt  api.c  asm.c  asm.h  hello.c  hello.h  imts.c  imts.h  openmp.c  openmp.h  scheduler.c  scheduler.h  sequential.c  sequential.h  sequential_asm.c  sequential_asm.h  util.h
src/impl/: CMakeLists.txt  asm.c  asm.h  asm.s  imts.c  imts.h  openmp.c  openmp.h  scheduler.c  scheduler.h  scheduler_asm.c  scheduler_asm.h  sequential.c  sequential.h  sequential_asm.c  sequential_asm.h  sequential_asm.s  sequential_asm_zorder.s  util.c  util.h
test/: CMakeLists.txt  asm.py  hello.py  imts.py  imts_sequential.py  imts_sequential_asm.py  imts_sequential_asm_omp_tasks.py  imts_sequential_asm_omp_tasks_zorder.py  imts_sequential_asm_zorder.py  imts_sequential_omp_tasks.py  imts_sequential_omp_tasks_zorder.py  imts_sequential_zorder.py  openmp_loops.py  openmp_tasks.py  scheduler.py  scheduler_asm.py  sequential.py  sequential_asm.py  sequential_asm_omp_loops.py  sequential_asm_omp_loops_zorder.py  sequential_asm_zorder.py  sequential_omp_loops.py  sequential_omp_loops_zorder.py  sequential_zorder.py
